--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,17 +4,15 @@ volumes:
   prometheus_data: {}
   grafana_data: {}
 
-networks:
-  monitor:
-    driver: overlay
+#networks:
+#  monitor:
+#    driver: overlay
 
 services:
   prometheus:
     image: prom/prometheus:v2.0.0
     ports:
       - 9090:9090
-    networks:
-      - monitor
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
@@ -28,8 +26,6 @@ services:
     image: prom/node-exporter:v0.15.1
     ports:
       - 9100:9100
-    networks:
-      - monitor
     volumes:
       - /proc:/host/proc
       - /sys:/host/sys
@@ -46,8 +42,6 @@ services:
       - 3000:3000
     depends_on:
       - prometheus
-    networks:
-      - monitor
     volumes:
       - grafana_data:/var/lib/grafana
     environment:
